syntax = "proto3";

package transmitter;
option go_package = "./transmitter";

import "google/protobuf/timestamp.proto";

message EmptyBody {

}

message Reponses {
    string session_id = 1;
    double frequency = 2;
    google.protobuf.Timestamp timestamp = 3;
}

service Transmit {
    rpc TransmitVals (EmptyBody) returns (stream Reponses) {}
}